Mon Apr 20 01:54:00 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (default_flags): Another dumb thinko.

Sun Apr 19 16:58:30 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (flag_set): Fix dumb thinko.

Sat Apr 18 12:05:06 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Resend.pm (post): Add separate entities for notification
 	messages.  Purge all entities if not passing them on to bottom
 	half function.

Tue Apr 14 00:41:58 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/List.pm (flag_set): Look in nonmember_flags if checking
 	on a nonmember.
	(default_flags): Look in the config file instead returning
 	something hardcoded.

	* lib/mj_cf_defs.pl: Add defaults for below.

	* lib/mj_cf_data.pl: Add default_flags and nonmember_flags.

Sun Apr 12 00:03:57 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (_re_match): Prevent problems with specials in
 	matched string.

	* lib/Mj/Resend.pm (_post): Fix undef bug in subject_prefix
 	manipulation.

	* Makefile.PL (check_prereq): Print info on how to use CPAN to
 	install missing modules.

	* bin/mj_email: Don't close stderr.

	* bin/mj_trigger: Don't close stderr.

	* bin/mj_confirm: Don't close stderr.

	* bin/mj_resend: Don't close stderr.

	* installbin: Clean up pattern matches.

	* lib/Mj/Parser.pm (parse_line): Add ability to backslash lines
 	within a here document.

	* lib/Mj/Config.pm: Add new legal access variables.
	(_compile_rule): Fix dumb typo in regexp.

Sat Apr 11 20:08:26 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/mj_cf_data.pl: Tweak maxlength description.

	* lib/Mj/Access.pm (_d_post): Typo: dup_meg_id => dup_msg_id.
	(_d_post): Add checks for total_header_length_exceeded and
 	max_header_length_exceeded.

	* lib/Mj/Resend.pm (_check_header): Add header size checks.

	* lib/mj_cf_defs.pl: Added defaults for max_header_line_length and
 	max_total_header_length.
