@@ -124,7 +124,7 @@ $Mj::Config::default_string = q(
  'override_reply_to'    => 0,
  'comments'             => [],
  'addr_xforms'          => [],
- 'apply_global_xforms'  => 0,
+ 'apply_global_xforms'  => 1,
  'master_password'      => "$list.pass",
  'passwords'            => [],
  'site_name'            => 'Majordomo',
@@ -153,7 +153,7 @@ $Mj::Config::default_string = q(
  'bounce_probe_frequency' => 0,
  'default_language'     => 'en',
  'quote_regexp'         => '/^( - | : | > | [a-z]+> )/xi',
- 'max_header_line_length'=> 256,
+ 'max_header_line_length'=> 448,
  'max_total_header_length'=> 2048,
  'nonmember_flags'      => '',
  'default_flags'        => 'S',
